Fix dark mode

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,124 +1,36 @@
 @import "variables";
 
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #242424;
-        color: #dedede;
-    }
-
-    a {
-        color: $primary-color-dark;
-
-        &:active,
-        &:link,
-        &:visited {
-            border-bottom: 1px dotted #666;
-        }
-
-        &:hover {
-            border-bottom: 1px solid $primary-color-dark;
-        }
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        a {
-
-            &:link,
-            &:hover,
-            &:visited,
-            &:active {
-                color: #fff;
-            }
-        }
-    }
-
-    code {
-        background-color: #111;
-        border-color: #666;
-        border-radius: 5px;
-        padding: 3px;
-        font-size: 17px;
-    }
-
-    table {
-        border: 1px solid #3a3a3a;
-    }
-
-    td {
-        border: 1px solid #444;
-    }
-
-    th {
-        background-color: #444;
-    }
+// Set variable values that will change between dark/light mode
+:root, html[data-theme='light'] {
+    --background-color: #fff;
+    --code-bg-color: #eee;
+    --code-border-color: #555;
+    --header-color: #000;
+    --link-color: #990000;
+    --link-underline-color: #aaa;
+    --table-border-color: #dedede;
+    --table-header-bg-color: #eee;
+    --text-color: #212121;
 }
 
-@media (prefers-color-scheme: light) {
-    body {
-        color: #212121;
-    }
-
-    a {
-        color: $primary-color;
-
-        &:active,
-        &:link,
-        &:visited {
-            border-bottom: 1px dotted #aaa;
-        }
-
-        &:hover {
-            border-bottom: 1px solid $primary-color;
-        }
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        a {
-
-            &:link,
-            &:hover,
-            &:visited,
-            &:active {
-                color: #000;
-            }
-        }
-    }
-
-    code {
-        background-color: #eee;
-        border-color: #555;
-        border-radius: 5px;
-        padding: 3px;
-        font-size: 17px;
-    }
-
-    table {
-        border: 1px solid #dedede;
-    }
-
-    td {
-        border: 1px solid #dedede;
-    }
-
-    th {
-        background-color: #eee;
-    }
+html[data-theme='dark'] {
+    --background-color: #242424;
+    --code-bg-color: #111;
+    --code-border-color: #666;
+    --header-color: #fff;
+    --link-color: #ff8080;
+    --link-underline-color: #666;
+    --table-border-color: #3a3a3a;
+    --table-header-bg-color: #444;
+    --text-color: #dedede;
 }
 
 body {
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font: 19px Georgia, "Times New Roman", Times, serif;
     margin: 0;
 }
@@ -129,6 +41,7 @@ h3,
 h4,
 h5,
 h6 {
+    color: var(--header-color);
     font-family: $header-font-family;
 
     a {
@@ -137,6 +50,7 @@ h6 {
         &:hover,
         &:visited,
         &:active {
+            color: var(--header-color);
             text-decoration: none;
             border-bottom: 0;
         }
@@ -145,49 +59,46 @@ h6 {
 
 p {
     line-height: 1.5em;
-
-    a {
-
-        &:active,
-        &:link,
-        &:visited {
-            border-bottom: 1px dotted #aaa;
-            text-decoration: none;
-        }
-
-        &:hover {
-            border-bottom: 1px solid $primary-color;
-            text-decoration: none;
-        }
-    }
 }
 
 a {
+    color: var(--link-color);
 
-    &:link,
     &:active,
+    &:link,
     &:visited {
+        border-bottom: 1px dotted var(--link-underline-color);
         text-decoration: none;
+    }
+
+    &:hover {
+        border-bottom: 1px solid var(--link-color);
     }
 }
 
 table {
+    border: 1px solid var(--table-border-color);
     border-collapse: collapse;
     border-spacing: 0;
 }
 
 th {
+    background-color: var(--table-header-bg-color);
     font-family: $header-font-family;
     padding: 10px 0;
 }
 
 td {
+    border: 1px solid var(--table-border-color);
     padding: 10px;
     min-width: 150px;
 }
 
 pre,
 code {
+    border-radius: 5px;
+    padding: 3px;
+    font-size: 17px;
     white-space: pre-wrap;
 }
 
