--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -4,19 +4,20 @@
     background-color: #111;
     display: block;
     width: 100%;
-    
+
     a {
         color: white;
     }
-    
+
     .navbar-list-container {
+        justify-content: space-between;
         align-self: center;
         display: flex;
         flex-direction: row;
         margin: auto;
         max-width: 950px;
     }
-    
+
     ul {
         align-items: center;
         display: flex;
@@ -25,7 +26,7 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
-        
+
         li {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 17px;
@@ -35,6 +36,11 @@
                 font-weight: bold;
             }
         }
-
     }
+}
+
+#theme-toggle {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
